--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,4 +27,9 @@ dependencies = [
     "pyjwt[crypto]>=2.9.0",
     "langserve>=0.3.0",
     "sse-starlette>=2.1.3",
+    "langgraph-checkpoint-postgres>=2.0.1",
+    "asyncpg>=0.30.0",
+    "greenlet>=3.1.1",
+    "psycopg>=3.2.3",
+    "alembic>=1.13.3",
 ]
