--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,9 @@ dependencies = [
     "flower>=2.0.1",
     "svix>=1.38.0",
     "fastapi-clerk-auth>=0.0.5",
-    "pygraphviz>=1.14",
     "ipython>=8.29.0",
     "black>=24.10.0",
     "redis>=5.2.1",
     "jmespath>=1.0.1",
+    "aio-pika>=9.5.4",
 ]
