Enhance market data download with verification and improved Docker integration
- Updated FTMarketData to include comprehensive download verification
- Added detailed logging and error handling for market data download
- Implemented expected file generation for different trading modes
- Refactored Docker command execution in FTBase to support streaming output
- Updated FTUserDir to use new template initialization method from FTBase
- Removed outdated data_download.md documentation
- Updated pyproject.toml dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,6 @@ dependencies = [
     "greenlet>=3.1.1",
     "psycopg>=3.2.3",
     "alembic>=1.13.3",
-    "python-on-whales>=0.73.0",
     "celery>=5.4.0",
     "flower>=2.0.1",
     "svix>=1.38.0",
@@ -42,4 +41,9 @@ dependencies = [
     "redis>=5.2.1",
     "jmespath>=1.0.1",
     "aio-pika>=9.5.4",
+    "docker>=7.1.0",
+    "PyYAML>=6.0.1",
+    "python-on-whales>=0.70.0",
+    "pandas>=2.2.3",
+    "pyarrow>=19.0.0",
 ]
