Add colorlog dependency and enhance logging infrastructure
- Added colorlog to pyproject.toml and uv.lock
- Updated launch.json with new debug configuration for backtest
- Refactored logging across multiple utility classes using setup_logger
- Improved error handling and log parsing in Docker command execution
- Enhanced logging in FTBacktesting, FTMarketData, and other utility classes

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,13 @@
       "console": "integratedTerminal"
     },
     {
+      "name": "Debug Backtest",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "app.util.ft.ft_backtesting",
+      "console": "integratedTerminal"
+    },
+    {
       "name": "Python Debugger: FastAPI",
       "type": "debugpy",
       "request": "launch",
