Add CCXT library and exchange pair retrieval endpoint
- Added CCXT library to project dependencies
- Created new endpoint in router_users to fetch trading pairs for an exchange
- Updated launch.json to debug ExchangeService
- Removed some optional fields from FreqtradeConfig schema
- Added ExchangeAPIError to exceptions

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,10 +12,10 @@
       "console": "integratedTerminal"
     },
     {
-      "name": "Debug Backtest",
+      "name": "Debug Exchange Service",
       "type": "debugpy",
       "request": "launch",
-      "module": "app.util.ft.ft_backtesting",
+      "module": "app.db.services.service_exchanges",
       "console": "integratedTerminal"
     },
     {
